--- a/static/index.html
+++ b/static/index.html
@@ -8,5 +8,16 @@
     </head>
     <body>
         <h1>Login Page</h1>
+        <form action="/login" method="POST">
+            <label>
+                Email
+                <input type="text" name="email">
+            </label>
+            <label>
+                Password
+                <input type="password" name="password">
+            </label>
+            <input type="submit" value="Login">
+        </form>
     </body>
 </html>
