--- a/static/index.html
+++ b/static/index.html
@@ -4,20 +4,11 @@
         <meta charset="UTF-8">
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
         <meta http-equiv="X-UA-Compatible" content="ie=edge">
-        <title>Login</title>
+        <title>Home</title>
     </head>
     <body>
-        <h1>Login Page</h1>
-        <form action="/login" method="POST">
-            <label>
-                Email
-                <input type="text" name="email">
-            </label>
-            <label>
-                Password
-                <input type="password" name="password">
-            </label>
-            <input type="submit" value="Login">
-        </form>
+        <h1>Home</h1>
+        <p>Welcome! You are logged in.</p>
+        <a href="/logout">Log Out</a>
     </body>
 </html>
