--- a/static/login.html
+++ b/static/login.html
@@ -8,7 +8,7 @@
     </head>
     <body>
         <h1>Login Page</h1>
-        <form action="/login" method="POST">
+        <form method="POST">
             <label>
                 Email
                 <input type="text" name="email">
