Implement Sign Up Endpoint

--- a/static/signup.html
+++ b/static/signup.html
@@ -4,11 +4,11 @@
         <meta charset="UTF-8">
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
         <meta http-equiv="X-UA-Compatible" content="ie=edge">
-        <title>Login</title>
+        <title>Sign Up</title>
     </head>
     <body>
-        <h1>Login Page</h1>
-        <form method="POST">
+        <h1>Sign Up Page</h1>
+        <form action="/user" method="POST">
             <label>
                 Email
                 <input type="text" name="email">
@@ -17,8 +17,7 @@
                 Password
                 <input type="password" name="password">
             </label>
-            <input type="submit" value="Login">
+            <input type="submit" value="Sign Up">
         </form>
-        <a href="/signup">Sign Up</a>
     </body>
 </html>
